[package]
name = "rp2040-screentest"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico = { git = "https://github.com/rp-rs/rp-hal.git" }
panic-halt= "0.2.0"
embedded-hal ="0.2.5"
cortex-m-rtic = "0.6.0-alpha.5"
rp2040-boot2 = "0.2"
nb = "1.0"
i2c-pio = { git = "https://github.com/ithinuel/i2c-pio-rs", rev = "fb6167d02b7fbc46a83f344f5242823bcd16e271" }
embedded-time = "0.12.0"
cortex-m-rt = { version = "0.7" }
cortex-m = "0.7.2"
st7789 = "0.6.1"
display-interface = "0.4.1"
display-interface-spi = "0.4.1"
embedded-graphics = "0.7"
sixtyfps-corelib = { path = "../sixtyfps/sixtyfps_runtime/corelib", default-features = false, features = ["libm"] }
sixtyfps = { path = "../sixtyfps/api/sixtyfps-rs", default-features = false }
sixtyfps-rendering-backend-mcu = { path = "../sixtyfps/sixtyfps_runtime/rendering_backends/mcu", default-features = false, features = ["unsafe_single_core"] }
triomphe = { version = "0.1.3", default-features = false, features = ["atomic-polyfill"] }
alloc-cortex-m = "0.4.1"

[build-dependencies]
sixtyfps-build = { path = "../sixtyfps/api/sixtyfps-rs/sixtyfps-build" }

[patch.crates-io]
triomphe = { git = "https://github.com/sixtyfpsui/triomphe", branch = "atomic-polyfill" }
once_cell = { git = "https://github.com/sixtyfpsui/once_cell", branch = "atomic-polyfill" }